--- a/projetapp-vue/package.json
+++ b/projetapp-vue/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.3",
+    "jquery": "^1.9.1",
     "vue": "^2.5.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
