--- a/projetapp-vue/package.json
+++ b/projetapp-vue/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.3",
-    "jquery": "^1.9.1",
+    "jquery": ">=3.4.0",
     "vue": "^2.5.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
